--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9661,7 +9661,13 @@ nav {
 
 .carousel-inner img {
   width: 100%;
-  max-height: 20rem;
+  height: 20rem;
+}
+
+.SizeImg {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 
 /*# sourceMappingURL=main.css.map */
