--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -11,13 +11,12 @@ $eerie-black: #121619;
 $raisin-black: #222323;
 $nickel: #6c6e70;
 
-$roboto: 'Roboto', sans-serif;
 $playfair: 'Playfair Display', serif;
 
 
-$ligth: 300;
-$regular: 400;
-$bold: 900;
+$ligth: 400;
+$bold: 700;
+$boldblack: 900;
 
 //tamaños de fuentes
 
