--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,4 @@
+
 @import 'abstracts/variables';
 @import  'abstracts/mixins';
 
@@ -9,6 +10,6 @@
 
 @import 'layout/header';
 @import 'layout/nav';
-//@import 'layout/main-section';
+@import 'layout/main';
 
 @import 'components/buttons';
