--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -11,5 +11,6 @@
 @import 'layout/header';
 @import 'layout/nav';
 @import 'layout/main';
+@import 'layout/footer';
 
 @import 'components/buttons';
