creacion pagina about.html

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -5,7 +5,7 @@ $ligth-gray: #d1d1d1;
 
 $fuzzy-wuzzy: #e56353;
 $rudy-pink: #d76c69;
-$verdoso: #99FF33;
+$verdoso: #038C7F;
 
 $eerie-black: #121619;
 $raisin-black: #222323;
