--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9655,6 +9655,38 @@ h3 {
     border-color: #dee2e6;
   }
 }
+.tittle__logo {
+  color: #fff !important;
+  font-size: 30px;
+  font-family: "Playfair Display", serif;
+  font-weight: 900;
+}
+
+.tittle__links {
+  color: #fff !important;
+  font-size: 18px;
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+}
+
+h1 {
+  color: #222323;
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+p {
+  color: #121619;
+  font-family: "Playfair Display", serif;
+  font-weight: 400;
+  font-size: 16px;
+  text-align: justify;
+}
+
 .carousel-inner img {
   width: 100%;
   height: 20rem;
@@ -9700,6 +9732,16 @@ nav {
   width: auto;
 }
 
+.About {
+  background-color: #75AABF !important;
+}
+
+.About__button {
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .footer {
   background-image: url(../images/footer2.jpg);
   height: 10rem;
@@ -9707,6 +9749,16 @@ nav {
   margin: 0;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.button2 {
+  color: #fff;
+  font-size: 18px;
+  background-color: #6c6e70;
+  border-radius: 25px;
+  border: 1px solid #121619;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 /*# sourceMappingURL=main.css.map */
