--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -14,6 +14,15 @@
 h1 {
   color: $raisin-black;
   font-family: $playfair;
+  font-weight: $boldblack;
+  font-size: $x-large;
+  text-align: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+h2 {
+  color: $white;
+  font-family: $playfair;
   font-weight: $bold;
   font-size: $x-large;
   text-align: center;
@@ -27,4 +36,13 @@ p{
   font-weight: $ligth;
   font-size: $medium;
   text-align: justify;
+}
+h4{
+  color: $raisin-black;
+  font-family: $playfair;
+  font-weight: $bold;
+  font-size: $x-large;
+  text-align: center;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
