--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -7,3 +7,12 @@
     padding-left: 1rem;
     padding-right: 1rem;
   }
+  .button1 {
+      color: $white;
+      font-size: $x-large;
+      background-color: $nickel;
+      border-radius: 25px;
+      border: 1px solid $eerie-black;
+      padding-left: 1rem;
+      padding-right: 1rem;
+        }
