--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -1,36 +1,33 @@
-.instructora__sol{
-display: flex;
-justify-content: space-between;
-&sole{
-  height: 10rem;
-  max-width: auto;
+.Instructora{
+  background-color: $rudy-pink;
+  height: auto;
 }
-&kat{
-  height: 10rem;
-  max-width: auto;
-}
-&Van{
-  height: 10rem;
-  max-width: auto;
-}
-}
+
+
+
 .PhotographyGalery img{
   width: 100%;
   height: 10rem;
+
 }
-
+.PhotographyGalery{
+  background-color: $fondogalery;
+}
 .cursos{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+height: 40rem;
+  &__imgs img{
 
-  &imgs{
-    height: 15rem;
-    width: auto;
+         transform: rotate(-90deg);
+         height: 15rem;
   }
-  &contens{
+  &__contents{
+    background: yellow;
     height: 15rem;
-    width: auto;
+    display:flex;
+    flex-direction:row;
+    justify-content: flex-end;
+    align-items: center;
+
   }
 }
 
@@ -39,6 +36,19 @@ justify-content: space-between;
 }
 .About__button{
   text-align: center;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-bottom:  3rem;
+
+}
+
+.form{
+  background-color: $verdoso;
+  height: 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  &__contacto{
+  text-align: center;
+
+}
 }
