modificacion con border-radius de galeria fotografica

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -46,3 +46,12 @@ h4{
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
+h3{
+  color: $raisin-black;
+  font-family: $playfair;
+  font-weight: $bold;
+  font-size: $x-large;
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+}
