--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9707,6 +9707,16 @@ h4 {
   padding-bottom: 3rem;
 }
 
+h3 {
+  color: #222323;
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+}
+
 .carousel-inner img {
   width: 100%;
   height: 23rem;
@@ -9728,6 +9738,9 @@ nav {
 
 .PhotographyGalery {
   background-color: #94CEF2;
+}
+.PhotographyGalery__presentaciones img {
+  border-radius: 25px;
 }
 
 .cursos {
@@ -9752,7 +9765,7 @@ nav {
 
 .About__button {
   text-align: center;
-  padding-bottom: 3rem;
+  padding: 3rem;
 }
 
 .form {
@@ -9777,10 +9790,10 @@ nav {
 
 .button2 {
   color: #fff;
-  font-size: 18px;
-  background-color: #6c6e70;
-  border-radius: 25px;
-  border: 1px solid #121619;
+  font-size: 30px;
+  background-color: #75AABF;
+  border-radius: 10px;
+  border: 1px solid #fff;
   padding-left: 1rem;
   padding-right: 1rem;
 }
@@ -9788,9 +9801,19 @@ nav {
 .button1 {
   color: #fff;
   font-size: 30px;
-  background-color: #6c6e70;
-  border-radius: 25px;
-  border: 1px solid #121619;
+  background-color: #038C7F;
+  border-radius: 10px;
+  border: 2px solid #fff;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.button3 {
+  color: #121619;
+  font-size: 18px;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-radius: 10px;
+  border: 2px solid #121619;
   padding-left: 1rem;
   padding-right: 1rem;
 }
