agregando enlace al footer

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -56,3 +56,9 @@ h3{
   padding-top: 2rem;
   padding-bottom: 3rem;
 }
+.footer__icon p{
+  color: $white;
+  font-family: $playfair;
+  font-size: $medium;
+  font-weight: $ligth;
+}
