--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9717,6 +9717,13 @@ h3 {
   padding-bottom: 3rem;
 }
 
+.footer__icon p {
+  color: #fff;
+  font-family: "Playfair Display", serif;
+  font-size: 16px;
+  font-weight: 400;
+}
+
 .carousel-inner img {
   width: 100%;
   height: 23rem;
