--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -11,9 +11,11 @@ $raisin-black: #222323;
 $nickel: #6c6e70;
 
 $playfair: 'Playfair Display', serif;
+$monse: 'Montserrat', sans-serif;
 
 
 $ligth: 400;
+$medium: 500;
 $bold: 700;
 $boldblack: 900;
 
