--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:500i&display=swap');
+
 
 @import 'abstracts/variables';
 @import  'abstracts/mixins';
