--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -71,3 +71,11 @@ h5{
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
+h6{
+  color: $white;
+  font-family: $monse;
+  font-size: $medium;
+  font-weight: $ligth;
+  text-align: center;
+  padding-bottom: 2rem;
+}
