--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -26,3 +26,12 @@
             padding-left: 1rem;
             padding-right: 1rem;
               }
+              .button_formulario {
+                  color: $white;
+                  font-size: $large;
+                  background-color: rgba(0, 0, 0, 0.03);
+                  border-radius: 10px;
+                  border: 2px solid $eerie-black;
+                  padding-left: 1rem;
+                  padding-right: 1rem;
+                    }
