--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -79,3 +79,17 @@ h6{
   text-align: center;
   padding-bottom: 2rem;
 }
+li {
+  color: $white;
+  font-family: $monse;
+  font-weight: $medium;
+  font-size: $medium;
+  text-align: center;
+}
+.courses h4{
+  color: $white;
+  font-family: $playfair;
+  font-weight: $bold;
+  font-size: $x-large;
+  text-align: center;
+}
