--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -15,5 +15,6 @@
 @import 'layout/main';
 @import 'layout/footer';
 @import 'layout/form';
+@import 'layout/clases';
 
 @import 'components/buttons';
