--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -35,3 +35,13 @@
                   padding-left: 1rem;
                   padding-right: 1rem;
                     }
+
+                    .button_perfilModal {
+                        color: $nickel;
+                        font-size: $large;
+                        background-color: $white;
+                        border-radius: 10px;
+                        border: 0.5px solid $eerie-black;
+                        padding-left: 1rem;
+                        padding-right: 1rem;
+                          }
