--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -92,4 +92,11 @@ li {
   font-weight: $bold;
   font-size: $x-large;
   text-align: center;
-}
+  }
+  .colorLetra{
+    color: $white;
+    font-family: $monse;
+    font-weight: $medium;
+    font-size: $medium;
+    text-align: center;
+  }
