--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9859,16 +9859,18 @@ nav {
   height: 40rem;
 }
 .cursos__imgs img {
-  border-radius: 25%;
+  border-radius: 10%;
   height: 15rem;
 }
 .cursos__contents {
-  background: yellow;
   height: 15rem;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
+}
+.cursos__button {
+  padding-top: 3rem;
 }
 
 .About {
@@ -9975,6 +9977,16 @@ iframe {
   background-color: #fff;
   border-radius: 10px;
   border: 0.5px solid #121619;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.buttonclases {
+  color: #121619;
+  font-size: 30px;
+  background-color: #fff;
+  border-radius: 10px;
+  border: 2px solid black;
   padding-left: 1rem;
   padding-right: 1rem;
 }
