--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -45,3 +45,12 @@
                         padding-left: 1rem;
                         padding-right: 1rem;
                           }
+                          .buttonclases{
+                            color: $eerie-black;
+                            font-size: 30px;
+                            background-color: $white;
+                            border-radius: 10px;
+                            border: 2px solid black;
+                            padding-left: 1rem;
+                            padding-right: 1rem;
+                          }
