--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500i&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400i,700i,900i&display=swap");
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -9856,14 +9857,14 @@ nav {
 }
 
 .cursos {
-  height: 40rem;
+  height: auto;
 }
 .cursos__imgs img {
   border-radius: 10%;
-  height: 15rem;
+  height: auto;
 }
 .cursos__contents {
-  height: 15rem;
+  height: auto;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -9990,5 +9991,25 @@ iframe {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.nav-link{
+  color: #fff!important;
+  font-family: Playfair display!important;
+  font-weight: bold;
+  font-size: 18px;
+  }
+  .buttonError{
+    color: black;
+    font-size: 30px;
+    background-color: #fff;
+    border-radius: 10px;
+    border: 2px solid black;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .boton{
+    text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 
+  }
 /*# sourceMappingURL=main.css.map */
