pagina home lista

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 $white: #fff;
-
+$fondoboton:#A66E4E;
 $fondoabout: #75AABF;
 
 $fondogalery: #94CEF2;
@@ -9,6 +9,7 @@ $verdoso: #038C7F;
 $eerie-black: #121619;
 $raisin-black: #222323;
 $nickel: #6c6e70;
+$cielo: #D98723;
 
 $playfair: 'Playfair Display', serif;
 $monse: 'Montserrat', sans-serif;
@@ -21,9 +22,9 @@ $boldblack: 900;
 
 //tamaños de fuentes
 
-
+$xxx-large: 100px;
 $xx-large: 70px;
-$x-large: 30px;
-$large: 18px;
+$x-large: 40px;
+$large: 20px;
 $medium: 16px;
 $small: 12px;
