--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,4 +1,37 @@
-.carousel-inner img{
-  width: 100%;
-  height: 23rem;
+.header_hero{
+  background-image: url("../images/header3.jpg");
+  background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+}
+.headerinicio{
+  background-image: url("../images/headersuperior3.jpg");
+  background-repeat: no-repeat;
+    background-size: cover;
+    height: 25rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+}
+.textPrincipal{
+  text-align: center;
+  p {
+    text-align: center;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+
+}
+.ButtonContacto {
+  text-align: center;
+
+}
+a:hover {
+  color: $white;
+  text-decoration: none!important;
 }
