--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -37,7 +37,7 @@ h1 {
   text-decoration: overline underline;
 }
 h2 {
-  color: $white;
+  color: $nickel;
   font-family: $playfair;
   font-weight: $bold;
   font-size: $x-large;
