--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -34,7 +34,7 @@ height: auto;
 }
 
 .About{
-  background-color: $fondoabout !important;
+//  background-color: $fondoabout !important;
 }
 .About__button{
   text-align: center;
