--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -25,6 +25,7 @@ $boldblack: 900;
 $xxx-large: 100px;
 $xx-large: 70px;
 $x-large: 40px;
+$large-p: 25px;
 $large: 20px;
 $medium: 16px;
 $small: 12px;
