--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -7,6 +7,11 @@ li{
   list-style: none;
 }
 a{
-
-  text-decoration-color: none;
+  color: none!important;
+  text-decoration: none;
+  background-color: transparent;
+}
+a:hover{
+  color: none!important;
+  text-decoration: none;
 }
