--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -149,3 +149,11 @@ hr{
   color: $verdoso;
   width: 100%;
 }
+.titleCards{
+  color: $white;
+  font-family: $monse;
+  font-size: $x-large;
+  font-weight: $boldblack;
+  text-align: cente;
+  text-shadow: 0.5rem 0.5rem 0.5rem $fondoboton;
+}
